--- a/es5/bower.json
+++ b/es5/bower.json
@@ -16,7 +16,10 @@
     "angular": "~1.5.8",
     "fontawesome": "~4.5.0",
     "angular-markdown-filter": "~1.3.2",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-translate": "^2.12.1",
+    "angular-bootstrap": "^2.2.0",
+    "angular-translate-loader-static-files": "^2.12.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8"
